fix: align guided search result page UI
Jira: AI-906

--- a/app/assets/stylesheets/src/journeys/_interactive-search.scss
+++ b/app/assets/stylesheets/src/journeys/_interactive-search.scss
@@ -29,11 +29,6 @@
   min-width: 120px;
 }
 
-.interactive-results__other-heading {
-  border-top: 1px solid settings.$tariff-subtle-border-colour;
-  padding-top: govuk.govuk-spacing(4);
-}
-
 .confidence-indicator {
   display: flex;
   flex-direction: column;
